--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -48,7 +48,7 @@
                 <!-- ============== Stephen Boorman ============== -->
                 <div class="team__card">
                     <div class="team__img">
-                        <img src="assets/images/male.png" alt="Stephen Boorman">
+                        <img src="../../assets/images/team/stephen.jpg" alt="Stephen Boorman">
                     </div>
                     <div class="team__specs">
                         <div class="person__name">Stephen Boorman</div>
@@ -56,36 +56,34 @@
                         <div class="person__quote">"The better I get to know men,
                             the more I find myself loving dogs."
                         </div>
-                        <div class="person__fav__dog">Fav Dog: Golden Retriever
-                            <img src="assets/images/fav_dog_3.png" alt="Golden Retriever">
+                        <div class="person__fav__dog">Fav Dog: Golden Doodle
                         </div>
                     </div>
                     <div class="person__social">
-                        <a href="#" target="_blank"><i class="uil uil-linkedin"></i></a>
-                        <a href="#" target="_blank"><i class="uil uil-github"></i></a>
-                        <a href="#" target="_blank"><i class="uil uil-instagram-alt"></i></a>
+                        <a href="https://www.linkedin.com/in/stephen-boorman-06896b19/" target="_blank"><i
+                                class="uil uil-linkedin"></i></a>
+                        <a href="https://github.com/s-boorman" target="_blank"><i class="uil uil-github"></i></a>
                     </div>
                 </div>
 
-                <!-- ============== James Jared Baca ============== -->
+                <!-- ============== Jared Baca ============== -->
                 <div class="team__card">
                     <div class="team__img">
-                        <img src="assets/images/male.png" alt="James Jared Baca">
+                        <img src="../../assets/images/team/jared.avif" alt="James Jared Baca">
                     </div>
                     <div class="team__specs">
-                        <div class="person__name">James Jared Baca</div>
+                        <div class="person__name">Jared Baca</div>
                         <div class="person__position">Guardian of the Kibble Kingdom</div>
                         <div class="person__quote">"Dogs are not our whole life,
                             but they make our lives whole."
                         </div>
-                        <div class="person__fav__dog">Fav Dog: Golden Retriever
-                            <img src="assets/images/fav_dog_3.png" alt="Golden Retriever">
+                        <div class="person__fav__dog">Fav Dog: Black Lab
                         </div>
                     </div>
                     <div class="person__social">
-                        <a href="#" target="_blank"><i class="uil uil-linkedin"></i></a>
-                        <a href="#" target="_blank"><i class="uil uil-github"></i></a>
-                        <a href="#" target="_blank"><i class="uil uil-instagram-alt"></i></a>
+                        <a href="https://www.linkedin.com/in/jared-baca/" target="_blank"><i
+                                class="uil uil-linkedin"></i></a>
+                        <a href="https://github.com/jaredbaca" target="_blank"><i class="uil uil-github"></i></a>
                     </div>
                 </div>
 
@@ -93,7 +91,7 @@
                 <!-- ============== Sri Nikhil Reddy Gudibandi ============== -->
                 <div class="team__card">
                     <div class="team__img">
-                        <img src="assets/images/team/Sri.png" alt="Sri Nikhil Reddy Gudibandi">
+                        <img src="../../assets/images/team/sri.avif" alt="Sri Nikhil Reddy Gudibandi">
                     </div>
                     <div class="team__specs">
                         <div class="person__name">Sri Nikhil Reddy Gudibandi</div>
@@ -102,13 +100,12 @@
                             but only to those who know how to listen."
                         </div>
                         <div class="person__fav__dog">Fav Dog: Golden Retriever
-                            <img src="assets/images/fav_dog_3.png" alt="Golden Retriever">
                         </div>
                     </div>
                     <div class="person__social">
-                        <a href="#" target="_blank"><i class="uil uil-linkedin"></i></a>
-                        <a href="#" target="_blank"><i class="uil uil-github"></i></a>
-                        <a href="#" target="_blank"><i class="uil uil-instagram-alt"></i></a>
+                        <a href="https://www.linkedin.com/in/sri-nikhil-reddy/" target="_blank"><i
+                                class="uil uil-linkedin"></i></a>
+                        <a href="https://github.com/srinikhil99" target="_blank"><i class="uil uil-github"></i></a>
                     </div>
                 </div>
             </div>
@@ -126,13 +123,11 @@
                         <div class="person__quote">"A dog is the only thing on earth
                             that loves you more than he loves himself."</div>
                         <div class="person__fav__dog">Fav Dog: Golden Retriever
-                            <img src="assets/images/fav_dog_3.png" alt="Golden Retriever">
                         </div>
                     </div>
                     <div class="person__social">
                         <a href="#" target="_blank"><i class="uil uil-linkedin"></i></a>
                         <a href="#" target="_blank"><i class="uil uil-github"></i></a>
-                        <a href="#" target="_blank"><i class="uil uil-instagram-alt"></i></a>
                     </div>
                 </div>
 
@@ -140,42 +135,40 @@
                 <!-- ============== Sri Divya Raparala ============== -->
                 <div class="team__card">
                     <div class="team__img">
-                        <img src="assets/images/female.png" alt="Sri Divya Raparala">
+                        <img src="../../assets/images/team/sridivya.webp" alt="Sri Divya Raparala">
                     </div>
                     <div class="team__specs">
                         <div class="person__name">Sri Divya Raparala</div>
                         <div class="person__position">Head Scratcher-in-Chief</div>
                         <div class="person__quote">"The love of a dog is a pure thing. He gives you a trust which is
                             total. You must not betray it."</div>
-                        <div class="person__fav__dog">Fav Dog: Golden Retriever
-                            <img src="assets/images/fav_dog_3.png" alt="Golden Retriever">
+                        <div class="person__fav__dog">Fav Dog: Shih Tzu
                         </div>
                     </div>
                     <div class="person__social">
-                        <a href="#" target="_blank"><i class="uil uil-linkedin"></i></a>
-                        <a href="#" target="_blank"><i class="uil uil-github"></i></a>
-                        <a href="#" target="_blank"><i class="uil uil-instagram-alt"></i></a>
+                        <a href="http://www.linkedin.com/in/sri-divya-raparla-730122222" target="_blank"><i
+                                class="uil uil-linkedin"></i></a>
+                        <a href="https://github.com/sridivyar" target="_blank"><i class="uil uil-github"></i></a>
                     </div>
                 </div>
 
                 <!-- ============== Rubeena Riyas ============== -->
                 <div class="team__card">
                     <div class="team__img">
-                        <img src="assets/images/female.png" alt="Rubeena Riyas">
+                        <img src="../../assets/images/team/rubeena.png" alt="Rubeena Riyas">
                     </div>
                     <div class="team__specs">
                         <div class="person__name">Rubeena Riyas</div>
                         <div class="person__position">Fur Baby Wrangler</div>
                         <div class="person__quote">"Once you have had a wonderful dog,
                             a life without one is a life diminished."</div>
-                        <div class="person__fav__dog">Fav Dog: Golden Retriever
-                            <img src="assets/images/fav_dog_3.png" alt="Golden Retriever">
+                        <div class="person__fav__dog">Fav Dog: Shih Tzu
                         </div>
                     </div>
                     <div class="person__social">
-                        <a href="#" target="_blank"><i class="uil uil-linkedin"></i></a>
-                        <a href="#" target="_blank"><i class="uil uil-github"></i></a>
-                        <a href="#" target="_blank"><i class="uil uil-instagram-alt"></i></a>
+                        <a href="https://www.linkedin.com/in/rubeenariyas" target="_blank"><i
+                                class="uil uil-linkedin"></i></a>
+                        <a href="https://github.com/rubeena1301" target="_blank"><i class="uil uil-github"></i></a>
                     </div>
                 </div>
             </div>
