working api integration

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -132,7 +132,7 @@ c19 -15 24 -29 24 -65 0 -25 -5 -50 -12 -57 -13 -13 -89 -29 -98 -21 -3 3 -5
         <div class="result__bar">
             <p class="results__desc">
                 wuff wuff!! <br><br>
-                I'm a Golden Retriever
+                <span>The Dog Breed is: {{responseBreed}}</span>
             </p>
         </div>
 
