--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -115,7 +115,7 @@
             <div class="team__right">
                 <div class="team__card">
                     <div class="team__img">
-                        <img src="assets/images/female.png" alt="Shiyu Wang">
+                        <img src="../../assets/images/team/sri.avif" alt="Shiyu Wang">
                     </div>
                     <div class="team__specs">
                         <div class="person__name">Shiyu Wang</div>
