--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,33 +6,29 @@
         </div>
         <div class="about__desc">
             <p>
-                The project "Dog Breed Identification" aims to develop an intelligent system capable of accurately
-                identifying the breed of a dog based on an uploaded photo. Using advanced image recognition and
-                machine learning techniques, this project leverages a vast database of dog breeds to train a model
-                that can analyze key features and characteristics in the input image to make accurate predictions.
+                Hey there, human pals! Woof, woof! Welcome to PawsitiveID – the paw-some project that's all about
+                celebrating us four-legged wonders! 🐾🐾
                 <br><br>
-                The system incorporates cutting-edge deep learning algorithms to extract relevant features from the
-                uploaded dog photo. These algorithms are trained on a large dataset of labeled dog images, allowing
-                the model to learn patterns and correlations between various visual cues and specific dog breeds. By
-                leveraging this trained knowledge, the system can classify and identify the most likely breed(s)
-                associated with the given image.
+                So, here's the deal – PawsitiveID is like magic, but real! You humans just need to upload a picture of
+                us dogs, and BAM! Our super-duper machine learning model gets to work, sniffing out our breeds with
+                jaw-dropping accuracy! 🐶🎯
                 <br><br>
-                To ensure high accuracy, the model is designed to handle various challenges such as variations in
-                lighting conditions, different angles, diverse coat colors, and distinctive breed-specific traits.
-                It takes into account factors like facial structure, body shape, coat texture, ear shape, and tail
-                characteristics to make informed breed predictions.
+                Imagine this: you're chillin' with your adorable fluffball, and you start wonderin', "Hmm, what mix of
+                breeds makes you the furball of cuteness you are?" Just snap a pic and let PawsitiveID do its thing! It
+                can spot up to 120 different breeds – from the teeniest Chihuahua to the giantest Great Dane! 🐕🐩
                 <br><br>
-                The dog breed identification project can have a wide range of applications, from assisting dog
-                owners in discovering the heritage of their furry companions to aiding animal shelters in
-                identifying mixed breed dogs for better adoption outcomes. It also serves as an educational tool,
-                providing valuable insights into the vast diversity of dog breeds and promoting a deeper
-                understanding and appreciation of these remarkable animals.
+                Our hooman friends worked really hard on this cool tech stuff. They fed the machine learning thingy tons
+                of doggie pics until it got really smart! Now, it knows all the nitty-gritty details that make each
+                breed special and unique. And guess what? It's super fast! No waitin' around – just quick and accurate
+                results! ⚡️
                 <br><br>
-                Overall, the dog breed identification project combines state-of-the-art image recognition
-                techniques, machine learning algorithms, and extensive dog breed data to create a powerful system
-                capable of accurately identifying the breed of a dog from an uploaded photo, contributing to the
-                development of intelligent and interactive tools in the field of animal recognition and
-                classification.
+                Oh, and don't worry if you're not a tech genius – PawsitiveID is sooo easy to use! Just a few clicks,
+                and boom! You'll know all about your furry buddy's ancestry. Plus, you can use it on your phones too,
+                'cause we know you humans can't keep your paws off those devices! 📱🐕
+                <br><br>
+                So, what are you waitin' for? Get ready for a paw-some adventure with PawsitiveID! Unleash the power of
+                technology and discover the hidden secrets behind our waggin' tails and goofy grins. Trust us; it's
+                gonna be a tail-waggin' good time! 🎉🐾
             </p>
         </div>
     </div>
@@ -59,11 +55,6 @@
                         <div class="person__fav__dog">Fav Dog: Golden Doodle
                         </div>
                     </div>
-                    <div class="person__social">
-                        <a href="https://www.linkedin.com/in/stephen-boorman-06896b19/" target="_blank"><i
-                                class="uil uil-linkedin"></i></a>
-                        <a href="https://github.com/s-boorman" target="_blank"><i class="uil uil-github"></i></a>
-                    </div>
                 </div>
 
                 <!-- ============== Jared Baca ============== -->
@@ -80,18 +71,13 @@
                         <div class="person__fav__dog">Fav Dog: Black Lab
                         </div>
                     </div>
-                    <div class="person__social">
-                        <a href="https://www.linkedin.com/in/jared-baca/" target="_blank"><i
-                                class="uil uil-linkedin"></i></a>
-                        <a href="https://github.com/jaredbaca" target="_blank"><i class="uil uil-github"></i></a>
-                    </div>
                 </div>
 
 
                 <!-- ============== Sri Nikhil Reddy Gudibandi ============== -->
                 <div class="team__card">
                     <div class="team__img">
-                        <img src="../../assets/images/team/sri.avif" alt="Sri Nikhil Reddy Gudibandi">
+                        <img src="../../assets/images/team/sri.jpg" alt="Sri Nikhil Reddy Gudibandi">
                     </div>
                     <div class="team__specs">
                         <div class="person__name">Sri Nikhil Reddy Gudibandi</div>
@@ -102,11 +88,6 @@
                         <div class="person__fav__dog">Fav Dog: Golden Retriever
                         </div>
                     </div>
-                    <div class="person__social">
-                        <a href="https://www.linkedin.com/in/sri-nikhil-reddy/" target="_blank"><i
-                                class="uil uil-linkedin"></i></a>
-                        <a href="https://github.com/srinikhil99" target="_blank"><i class="uil uil-github"></i></a>
-                    </div>
                 </div>
             </div>
 
@@ -115,7 +96,7 @@
             <div class="team__right">
                 <div class="team__card">
                     <div class="team__img">
-                        <img src="../../assets/images/team/sri.avif" alt="Shiyu Wang">
+                        <img src="../../assets/images/team/shiyu.avif" alt="Shiyu Wang">
                     </div>
                     <div class="team__specs">
                         <div class="person__name">Shiyu Wang</div>
@@ -124,10 +105,6 @@
                             that loves you more than he loves himself."</div>
                         <div class="person__fav__dog">Fav Dog: Golden Retriever
                         </div>
-                    </div>
-                    <div class="person__social">
-                        <a href="#" target="_blank"><i class="uil uil-linkedin"></i></a>
-                        <a href="#" target="_blank"><i class="uil uil-github"></i></a>
                     </div>
                 </div>
 
@@ -145,11 +122,6 @@
                         <div class="person__fav__dog">Fav Dog: Shih Tzu
                         </div>
                     </div>
-                    <div class="person__social">
-                        <a href="http://www.linkedin.com/in/sri-divya-raparla-730122222" target="_blank"><i
-                                class="uil uil-linkedin"></i></a>
-                        <a href="https://github.com/sridivyar" target="_blank"><i class="uil uil-github"></i></a>
-                    </div>
                 </div>
 
                 <!-- ============== Rubeena Riyas ============== -->
@@ -164,11 +136,6 @@
                             a life without one is a life diminished."</div>
                         <div class="person__fav__dog">Fav Dog: Shih Tzu
                         </div>
-                    </div>
-                    <div class="person__social">
-                        <a href="https://www.linkedin.com/in/rubeenariyas" target="_blank"><i
-                                class="uil uil-linkedin"></i></a>
-                        <a href="https://github.com/rubeena1301" target="_blank"><i class="uil uil-github"></i></a>
                     </div>
                 </div>
             </div>
