--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,5 +1,5 @@
-<input type="text" id="searchInput" name="search" placeholder="Search for Dog..."
-        (input)="onSearchInput($event)">
+<!--<input type="text" id="searchInput" name="search" placeholder="Search for Dog..."
+        (input)="onSearchInput($event)">-->
 
 <main class="gallery gallery__content--flow">
 
