--- a/src/app/bts/bts.component.css
+++ b/src/app/bts/bts.component.css
@@ -46,7 +46,8 @@
 }
 
 .pdid__desc {
-    padding: 10px 50px 10px 50px;
+    margin: 25px 200px;
+    padding: 25px 50px;
     background: rgba(255, 255, 255, 0.3);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
