--- a/src/app/bts/bts.component.html
+++ b/src/app/bts/bts.component.html
@@ -7,13 +7,17 @@
         </div>
 
         <div class="pdid__btn">
-            <a download="" href="assets/pdf/my-new-dog-pdf-version.pdf" class="rep__button rep__button--flex">
+            <a target="_blank"
+                href="https://docs.google.com/presentation/d/1J4exabFj4kxhTMu7a-1bg3iXYmRxsljjj55M2-jqidg/edit?usp=sharing"
+                class="rep__button rep__button--flex">
                 Documentation&nbsp; <i class="fa-regular fa-file-pdf"></i>
             </a>
-            <a download="" href="assets/pdf/my-new-dog-pdf-version.pdf" class="rep__button rep__button--flex">
+            <a target="_blank" href="https://github.com/srinikhil99/pawsitive_id_Angular" class="rep__button
+                rep__button--flex">
                 Github Repo&nbsp; <i class="fa-solid fa-code-merge"></i>
             </a>
-            <a download="" href="assets/pdf/my-new-dog-pdf-version.pdf" class="rep__button rep__button--flex">
+            <a target="_blank" href="https://www.pivotaltracker.com/n/projects/2644380"
+                class="rep__button rep__button--flex">
                 Pivotal Tracker&nbsp; <i class="fa-solid fa-arrow-up-wide-short"></i>
             </a>
         </div>
