--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,10 +4,10 @@
         <p>This Project website was developed by Team 3 - PawsititveID as part of the course MET CS 673 - Software
             Engineering in summer 2023.</p>
         <ul class="socials">
-            <li><a href="https://github.com/srinikhil99/pawsitive_id_Angular"><i
+            <li><a target="_blank" href="https://github.com/srinikhil99/pawsitive_id_Angular"><i
                         class="fa-brands fa-github-alt"></i></a></li>
             <!-- <li><a href="#"><i class="fa-regular fa-file-pdf"></i></a></li> -->
-            <li><a
+            <li><a target="_blank"
                     href="https://docs.google.com/presentation/d/1J4exabFj4kxhTMu7a-1bg3iXYmRxsljjj55M2-jqidg/edit?usp=sharing"><i
                         class="fa-regular fa-file-powerpoint"></i></a></li>
             <li><a target="_blank" href="https://www.pivotaltracker.com/n/projects/2644380"><i
