Update home.component.html - custom alert html

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -129,6 +129,15 @@ c19 -15 24 -29 24 -65 0 -25 -5 -50 -12 -57 -13 -13 -89 -29 -98 -21 -3 3 -5
             <span id="file-chosen">{{ fileChosen }}</span>
         </div>
 
+        <!-- Add this div for the custom popup dialog -->
+        <div class="custom-popup" id="custom-popup">
+            <div class="popup-content">
+                <span class="close-popup" id="close-popup">&times;</span>
+                <p>Please upload an image file in .png or .jpg format.</p>
+            </div>
+        </div>
+
+
         <div class="result__bar">
             <p class="results__desc">
                 wuff wuff!! <br><br>
