--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,210 +1,250 @@
 .home__container {
-    display: grid;
-    /* flex-direction: column; */
-    grid-template-columns: repeat(2, 1fr);
-    justify-content: space-evenly;
-    margin: auto;
+  display: grid;
+  /* flex-direction: column; */
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: space-evenly;
+  margin: auto;
 }
 
 .left__container {
-    width: 100%;
-    margin-top: 50px;
-    justify-content: space-evenly;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  margin-top: 50px;
+  justify-content: space-evenly;
+  display: flex;
+  flex-direction: column;
 }
 
 .home__img {
-    display: grid;
-    align-items: center;
-    justify-content: center;
+  display: grid;
+  align-items: center;
+  justify-content: center;
 }
 
 .home__desc {
-    display: grid;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
+  display: grid;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
 }
 
 .home__desc p {
-    padding: 10px;
-    border-radius: 5px;
-    font-size: 25px;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 25px;
 }
 
 .right__container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .home__title {
-    text-align: center;
-    margin: 25px;
-    margin-top: 40px;
+  text-align: center;
+  margin: 25px;
+  margin-top: 40px;
 }
 
 .home__title h1 {
-    color: #fff;
+  color: #fff;
 }
 
 .upload__btn {
-    padding: 0.5rem;
-    border-radius: 0.3rem;
-    cursor: pointer;
-    width: 15%;
-    text-align: center;
-    cursor: pointer;
-    background: rgba(255, 255, 255, 0.25);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    border-radius: 10px;
+  padding: 0.5rem;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  width: 15%;
+  text-align: center;
+  cursor: pointer;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  border-radius: 10px;
 }
 
-.upload__btn__div:hover{
-    transform: scale(0.97);
+.upload__btn__div:hover {
+  transform: scale(0.97);
 }
 
 .upload__btn__div {
-    text-align: center;
+  text-align: center;
 }
 
 .upload__btn__div span {
-    align-items: center;
-    text-align: center;
+  align-items: center;
+  text-align: center;
 }
 
 #file-chosen {
-    margin-left: 0.3rem;
-    font-family: 'Balsamiq Sans', cursive;
+  margin-left: 0.3rem;
+  font-family: "Balsamiq Sans", cursive;
 }
 
 .upload__img {
-    margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 .upload__preview {
-    width: 450px;
-    height: 450px;
-    padding: 10px;
-    margin-bottom: 30px;
-    background: rgba(255, 255, 255, 0.25);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
+  width: 450px;
+  height: 450px;
+  padding: 10px;
+  margin-bottom: 30px;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .upload__img__bg {
-    opacity: 0.9;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  opacity: 0.9;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .result__bar {
-    width: 300px;
-    height: 100px;
-    padding: 20px;
-    margin: 30px;
-    background: rgba(255, 255, 255, 0.25);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    border-radius: 10px;
-    font-weight: 700;
-    text-align: center;
+  width: 300px;
+  height: 100px;
+  padding: 20px;
+  margin: 30px;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  border-radius: 10px;
+  font-weight: 700;
+  text-align: center;
 }
 
+.custom-popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  border-radius: 10px;
+}
+
+.popup-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  text-align: center;
+  color: #000;
+}
+
+.close-popup {
+  font-size: 25px;
+  padding: 2px;
+  cursor: pointer;
+  font-weight: 900;
+  float: right;
+  background-color: #000;
+  color: #fff;
+  border-radius: 25%;
+}
 
 @media screen and (max-width: 768px) {
-    .home__container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin: auto;
-    }
+  .home__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+  }
 
-    .left__container {
-        /* width: 100%; */
-        padding-top: 30px;
-        margin-top: 0;
-        order: 2;
-    }
+  .left__container {
+    /* width: 100%; */
+    padding-top: 30px;
+    margin-top: 0;
+    order: 2;
+  }
 
-    .home__gif {
-        width: 80%;
-        margin: auto;
-    }
+  .home__gif {
+    width: 80%;
+    margin: auto;
+  }
 
-    .home__desc p {
-        padding-top: 60px;
-        font-size: 25px;
-    }
+  .home__desc p {
+    padding-top: 60px;
+    font-size: 25px;
+  }
 
-    .right__container {
-        width: 100%;
-    }
+  .right__container {
+    width: 100%;
+  }
 
-    .upload__preview {
-        margin: auto;
-        width: 80%;
-    }
+  .upload__preview {
+    margin: auto;
+    width: 80%;
+  }
 
-    .upload__img__bg {
-        margin: auto;
-        width: 100%;
-    }
+  .upload__img__bg {
+    margin: auto;
+    width: 100%;
+  }
 
-    #file-ip-1-preview {
-        margin: auto;
-        width: 100%;
-    }
+  #file-ip-1-preview {
+    margin: auto;
+    width: 100%;
+  }
 
-    .upload__btn__div {
-        margin: auto;
-        margin-top: 40px;
-    }
+  .upload__btn__div {
+    margin: auto;
+    margin-top: 40px;
+  }
 
-    .result__bar {
-        margin: 15px auto 30px;
-    }
+  .result__bar {
+    margin: 15px auto 30px;
+  }
 }
 
 /* ============ IPHONE SE ============== */
 @media screen and (min-width: 375px), (min-width: 360px) {
-    .home__title{
-        margin: 10px;
-    }
+  .home__title {
+    margin: 10px;
+  }
 
-    .upload__img{
-        margin-bottom: 0px;
-    }
+  .upload__img {
+    margin-bottom: 0px;
+  }
 
-    .result__bar{
-        margin: 25px auto 20px;
-    }
+  .result__bar {
+    margin: 25px auto 20px;
+  }
 
-    .home__img svg{
-        padding: 5px;
-        width: 250pt;
-    }
+  .home__img svg {
+    padding: 5px;
+    width: 250pt;
+  }
 
-    .home__desc p{
-        padding: 30px 5px;
-        font-size: 20px;
-    }
+  .home__desc p {
+    padding: 30px 5px;
+    font-size: 20px;
+  }
 
-    .upload__preview{
-        width: 90%;
-    }
+  .upload__preview {
+    width: 90%;
+  }
 }
