--- a/src/app/bts/bts.component.css
+++ b/src/app/bts/bts.component.css
@@ -1,82 +1,242 @@
 /* ========================= BTS PAGE ======================= */
 
 .pdid__title__space {
-    display: flex;
-    justify-content: space-evenly;
-    padding: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
 }
 
 .pdid__title {
-    padding-top: 10px;
+  padding-top: 10px;
 }
 
 .rep__button {
-    color: #000;
-    padding: 1rem;
-    border-radius: .5rem;
-    font-weight: 500;
-    font-size: 18px;
-    cursor: pointer;
-    width: 200px;
-    height: 50px;
-    background: rgba(255, 255, 255, 0.3);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    margin: 10px;
+  color: #000;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  font-weight: 500;
+  font-size: 18px;
+  cursor: pointer;
+  width: 200px;
+  height: 50px;
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  margin: 10px;
 }
 
-.rep__button:hover{
-    transform: scale(0.97);
+.rep__button:hover {
+  transform: scale(0.97);
 }
 
 .rep__button--flex {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .pdid__btn {
-    margin: auto;
-    text-align: center;
+  margin: auto;
+  text-align: center;
 }
 
 .pdid__desc__container {
-    margin: 30px;
+  margin: 30px;
 }
 
 .pdid__desc {
-    margin: 25px 200px;
-    padding: 25px 50px;
-    background: rgba(255, 255, 255, 0.3);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(6.2px);
-    -webkit-backdrop-filter: blur(6.2px);
-    border: 1px solid rgba(255, 255, 255, 0.92);
+  margin: 25px 200px;
+  padding: 25px 50px;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.2px);
+  -webkit-backdrop-filter: blur(6.2px);
+  border: 1px solid rgba(255, 255, 255, 0.92);
+}
+
+.pdid__img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 /* ================ RESPONSIVE ================= */
 
 @media screen and (max-width: 768px) {
-    .pdid__desc{
-        padding: 10px;
-    }
+  .pdid__desc {
+    padding: 10px;
+    margin: 0;
+  }
 }
 
 /* ============ IPHONE SE ============== */
-@media screen and (min-width: 375px), (min-width: 360px){
-    /* .pdid__btn{
+@media screen and (min-width: 375px), (min-width: 360px) {
+  /* .pdid__btn{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     } */
 
-    .pdid__btn a{
-        width: 160px;
-        font-size: 15px;
-    }
+  .pdid__btn a {
+    width: 160px;
+    font-size: 15px;
+  }
 
-    .pdid__desc__container{
-        margin: 5px;
-    }
+  .pdid__desc__container {
+    margin: 5px;
+  }
+}
+
+.tabset > input[type="radio"] {
+  position: absolute;
+  left: -200vw;
+}
+
+.tabset .tab-panel {
+  display: none;
+}
+
+.tabset > input:first-child:checked ~ .tab-panels > .tab-panel:first-child,
+.tabset > input:nth-child(3):checked ~ .tab-panels > .tab-panel:nth-child(2),
+.tabset > input:nth-child(5):checked ~ .tab-panels > .tab-panel:nth-child(3),
+.tabset > input:nth-child(7):checked ~ .tab-panels > .tab-panel:nth-child(4),
+.tabset > input:nth-child(9):checked ~ .tab-panels > .tab-panel:nth-child(5),
+.tabset > input:nth-child(11):checked ~ .tab-panels > .tab-panel:nth-child(6),
+.tabset > input:nth-child(13):checked ~ .tab-panels > .tab-panel:nth-child(7),
+.tabset > input:nth-child(15):checked ~ .tab-panels > .tab-panel:nth-child(8),
+.tabset > input:nth-child(17):checked ~ .tab-panels > .tab-panel:nth-child(9) {
+  display: block;
+}
+
+.tabset > label {
+  position: relative;
+  display: inline-block;
+  padding: 15px 15px 25px;
+  border: 1px solid transparent;
+  border-bottom: 0;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.tabset > label::after {
+  content: "";
+  position: absolute;
+  left: 15px;
+  bottom: 10px;
+  width: 22px;
+  height: 4px;
+}
+
+input:focus-visible + label {
+  outline: 2px solid #000;
+  border-radius: 3px;
+}
+
+.tabset > label:hover,
+.tabset > input:focus + label,
+.tabset > input:checked + label {
+  transform: scale(1);
+}
+
+.tabset > label:hover::after,
+.tabset > input:focus + label::after,
+.tabset > input:checked + label::after {
+  transform: scale(1);
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.tabset > input:checked + label {
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.2px);
+  -webkit-backdrop-filter: blur(6.2px);
+  border: 1px solid rgba(255, 255, 255, 0.92);
+  z-index: 1;
+}
+
+.tab-panel {
+  padding: 30px 0;
+  border-top: 1px solid #ccc;
+}
+
+.tabset {
+  max-width: 65em;
+}
+
+.slider {
+  width: 70%;
+  max-width: 800px;
+  overflow: hidden;
+  position: relative;
+  margin: 0 auto;
+}
+
+.slide {
+  width: 100%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.slide img {
+  width: 100%;
+  height: auto;
+}
+
+.slide.active {
+  display: block;
+}
+
+@keyframes slideAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.slider1 {
+  width: 70%;
+  max-width: 800px;
+  overflow: hidden;
+  position: relative;
+  margin: 0 auto;
+}
+
+.slide1 {
+  width: 100%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.slide1 img {
+  width: 100%;
+  height: auto;
+}
+
+.slide1.active {
+  display: block;
+}
+
+table {
+  /* border-collapse: collapse; */
+  width: 100%;
+}
+
+table,
+th,
+td {
+  border: 1px solid;
+  text-align: left;
+  padding: 8px;
+  text-align: center;
+}
+
+.tabset p {
+  font-size: 18px;
 }
