--- a/src/app/bts/bts.component.html
+++ b/src/app/bts/bts.component.html
@@ -10,7 +10,7 @@
             <a target="_blank"
                 href="https://docs.google.com/presentation/d/1J4exabFj4kxhTMu7a-1bg3iXYmRxsljjj55M2-jqidg/edit?usp=sharing"
                 class="rep__button rep__button--flex">
-                Documentation&nbsp; <i class="fa-regular fa-file-pdf"></i>
+                Slides&nbsp; <i class="fa-regular fa-file-powerpoint"></i>
             </a>
             <a target="_blank" href="https://github.com/srinikhil99/pawsitive_id_Angular" class="rep__button
                 rep__button--flex">
